📖 DOC: Save generated docs to `master` branch

--- a/.github/workflows/docbox.yml
+++ b/.github/workflows/docbox.yml
@@ -16,8 +16,9 @@ jobs:
       - uses: Ortus-Solutions/commandbox-action@v1
         with:
           cmd: docbox generate strategy=HTML mapping=DocBox excludes=test|ModuleConfig strategy-outputDir=docs strategy-projectTitle=DocBox
+
       - name: Commit Docs Pages
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          branch: gh-pages
+          branch: master
           commit_message: "📖 DOC: Auto-generate DocBox API docs"
